SVG buttons, fix Grunt for backend

--- a/frontend/components/bottomButtons/pug/bottomButtons.pug
+++ b/frontend/components/bottomButtons/pug/bottomButtons.pug
@@ -5,8 +5,18 @@ div(layout="row", flex, layout-align="space-between")
 				md-icon(md-font-icon="{{button.icon}}", ng-class="{{button.iconClass}}")
 			label {{button.label}}
 
-	#rightButtons.ignoreClick(ng-if="vm.showButtons", layout="row")
-		span(
+	#rightButtons.ignoreClick(ng-if="vm.showButtons", layout="column" layout-align="center center")
+		.viewingOptionButtonHolder
+			.viewingOptionButtons(
+				layout="row", ng-if="vm.showViewingOptionButtons", layout-align="center center")
+				md-button.md-icon-button.actionButton(
+						ng-repeat="option in vm.viewingOptions"
+						ng-click="vm.viewingOptions[$index].click($index)" 
+						ng-if="vm.viewingOptions[$index].label !== vm.rightButtons[0].label"
+						aria-label="{{vm.viewingOptions[$index].label}}")
+					img(ng-src="{{vm.viewingOptions[$index].icon}}")
+					//md-icon(md-font-icon="{{vm.viewingOptions[$index].icon}}", ng-class="vm.viewingOptions[$index].iconClass")
+		div(
 			ng-repeat="button in vm.rightButtons"
 			ng-click="button.click()" 
 			layout="column"
@@ -17,15 +27,7 @@ div(layout="row", flex, layout-align="space-between")
 				//md-icon.ignoreClick(md-font-icon="{{button.icon}}", ng-class="{{button.iconClass}}")
 			label.ignoreClick {{button.label}}
 
-.viewingOptionButtons(
-	layout="column", ng-if="vm.showViewingOptionButtons", layout-align="center center")
-	md-button.actionButton(
-			ng-repeat="option in vm.viewingOptions"
-			ng-click="vm.viewingOptions[$index].click($index)" 
-			ng-if="vm.viewingOptions[$index].label !== vm.rightButtons[0].label"
-			aria-label="{{vm.viewingOptions[$index].label}}")
-		img(ng-src="{{vm.viewingOptions[$index].icon}}", ng-class="{{vm.viewingOptions[$index].iconClass}}")
-		//md-icon(md-font-icon="{{vm.viewingOptions[$index].icon}}", ng-class="vm.viewingOptions[$index].iconClass")
+		
 
 
 compass(ng-click="vm.toggleElements()")
