--- a/frontend/components/bottomButtons/css/bottomButtons.css
+++ b/frontend/components/bottomButtons/css/bottomButtons.css
@@ -34,14 +34,13 @@ bottom-buttons #showButtonIcon {
 
 bottom-buttons .actionButton md-icon {
   color: #FFFFFF !important;
-  font-size: 25px;
-  text-shadow: 0 0 2px #000;
+  font-size: 25px;;
 }
 
-bottom-buttons .viewingOptionButtons {
+bottom-buttons .viewingOptionButtonHolder {
   position: absolute;
-  right: 15px;
-  top: -40px;
+  height: 100%;
+  bottom: 40px;
 }
 
 bottom-buttons label {
@@ -54,14 +53,23 @@ bottom-buttons label:hover {
   cursor: pointer;
 }
 
-.bottomButtonIconCardboard {
+#rightButtons {
+  width: 100px;
+}
+
+/*.bottomButtonIconCardboard {
   font-size: 20px !important;
   margin-left: -4px;
 }
 .bottomButtonIconWalk {
   margin-left: 0;
 }
+
 .bottomButtonIconHelicopter {
-  margin-left: -5px;
-  font-size: 22px !important;
+  margin-left: -10px;
 }
+
+.viewingOptionButtons .bottomButtonIconHelicopter {
+  margin-left: -10px;
+  padding-left: 7px;
+}*/
