Build assets purely with gulp

--- a/frontend/components/account/pug/accountBilling.pug
+++ b/frontend/components/account/pug/accountBilling.pug
@@ -67,7 +67,7 @@
 					.accountBillingSave
 						div(layout="row", layout-align="start")
 							md-button.md-raised.md-accent(ng-disabled="vm.saveDisabled", ng-click="vm.changeSubscription()", aria-label="Save") Confirm
-							img(src="/public/images/pp-logo-100px.png")
+							img(src="/public/images/paypal.png")
 
 					p.accountBillingAddressInfo Changing your billing information could affect your applicable tax rate
 					p.accountBillingAddressInfo * Required field
