--- a/frontend/components/issues/pug/issuesListItem.pug
+++ b/frontend/components/issues/pug/issuesListItem.pug
@@ -2,15 +2,15 @@
 	div(layout='row')
 		#issueRoleIndicator
 		.issueListItemThumbnail(layout="column", layout-align="center center")
-			img(ng-if="$ctrl.data.thumbnail", ng-src="{{$ctrl.data.thumbnailPath}}")
-			md-icon.angular-material-icons.issueListItemMissingThumbnail(ng-if="!$ctrl.data.thumbnail") insert_photo
+			img(ng-if="vm.data.thumbnail", ng-src="{{vm.data.thumbnailPath}}")
+			md-icon.angular-material-icons.issueListItemMissingThumbnail(ng-if="!vm.data.thumbnail") insert_photo
 		div(flex, layout="column")
-			label#issuesListItemTitle(flex="none", ng-class="{userRoleIssueListItemTitle: $ctrl.assignedToUserRole}") {{$ctrl.data.title}}
+			label#issuesListItemTitle(flex="none", ng-class="{userRoleIssueListItemTitle: vm.assignedToUserRole}") {{vm.data.title}}
 			#issuesListItemInfo(layout="row", layout-align="space-between center", flex="none")
 				div(layout="row", layout-align="start start")
 					md-icon.angular-material-icons#issueListItemStatus(
-					style="color:{{$ctrl.IssuesService.getStatusIcon($ctrl.data).colour}}") {{$ctrl.IssuesService.getStatusIcon($ctrl.data).icon}}
-					label(flex) {{$ctrl.data.owner}}
-				label {{$ctrl.data.timeStamp}}
+					style="color:{{vm.IssuesService.getStatusIcon(vm.data).colour}}") {{vm.IssuesService.getStatusIcon(vm.data).icon}}
+					label(flex) {{vm.data.owner}}
+				label {{vm.data.timeStamp}}
 			#issuesListItemDescription
-				label(ng-bind-html="$ctrl.data.desc | linky:'_blank'") {{$ctrl.data.desc}}
+				label(ng-bind-html="vm.data.desc | linky:'_blank'") {{vm.data.desc}}
