--- a/frontend/components/issues/css/issues.css
+++ b/frontend/components/issues/css/issues.css
@@ -264,8 +264,8 @@ issue-comp .issueCompItemContainer div {
 }
 
 issue-comp #issueCompTitleArea {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
   outline: none;
 }
 issue-comp .issueCompTitleArea:hover {
@@ -314,13 +314,12 @@ issue-comp .issueCompThumbnail {
   padding-top: 0px;
   background-position-y: 50%;
   height: 200px;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-issue-comp .issueCompThumbnailImage:hover {
+issue-comp .issueCompThumbnail:hover {
   cursor: pointer;
   opacity: 0.8;
-}
-issue-comp .issueCompThumbnailImage {
-  width: 100%;
 }
 
 issue-comp .issueCompIssueOwner {
