--- a/frontend/components/issues/pug/issueComp.pug
+++ b/frontend/components/issues/pug/issueComp.pug
@@ -86,19 +86,11 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="vm.toggleEditDescription($event)", ng-if="vm.canUpdate")
 								md-tooltip(md-direction="bottom") edit
 								md-icon.angular-material-icons(style="color:{{vm.editCommentColor}}") mode_edit
-				//.issueCompThumbnail(
-					layout="row"
-					layout-align="center"
-					ng-if="vm.descriptionThumbnail"
-					ng-click="vm.showScreenShot($event, vm.issueData.viewpoint)")
 				
 				.issueCompThumbnail(
-				ng-if="vm.descriptionThumbnail"
-				ng-style="{'background-image': 'url({{vm.descriptionThumbnail}})', 'background-repeat' : 'no-repeat', 'background-size': 'contain'}"
-				ng-click="vm.showScreenShot($event, vm.issueData.viewpoint)")
-					
-						
-					//img.issueCompThumbnailImage(ng-src="{{}}")
+					ng-if="vm.descriptionThumbnail"
+					ng-style="{'background-image': 'url({{vm.descriptionThumbnail}})'}"
+					ng-click="vm.showScreenShot($event, vm.issueData.viewpoint)")
 
 		// Comments
 		.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="vm.issueData.comments.length>0")
@@ -119,12 +111,14 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 
 						// Editing normal comment
 						md-input-container.fillHeight(flex, ng-if="comment.editing")
-							textarea.fillHeight(ng-model="comment.comment"
+							textarea.fillHeight(
+								ng-model="comment.comment"
 								flex
 								aria-label="Description"
 								tdr-focus="true"
 								ng-focus="vm.textInputHasFocus(true)"
 								ng-blur="vm.textInputHasFocus(false)")
+
 						.issueCompTextActions(layout="row", ng-if="!comment.sealed && !comment.action", flex="none")
 							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="vm.toggleEditComment($event, $index)")
 								md-tooltip(md-direction="bottom") edit
@@ -132,6 +126,7 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 							md-button.md-icon-button.md-accent(aria-label="Delete Comment", ng-click="vm.deleteComment($event, $index)")
 								md-tooltip(md-direction="bottom") delete
 								md-icon.angular-material-icons close
+
 					// Info
 					.issueCompCommentOwner(
 					ng-if="vm.data && !comment.action"
@@ -156,13 +151,15 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 						label {{comment.timeStamp}}
 
 				// Thumbnail
+				p Screenshot: {{comment.viewpoint}}
 				.issueCompThumbnail(
-				layout="row"
-				layout-align="center"
-				ng-if="comment.viewpoint.screenshot"
-				ng-click="vm.showScreenShot($event, comment.viewpoint)"
-				flex)
-					img.issueCompThumbnailImage(ng-src="{{comment.viewpoint.screenshotPath}}")
+					layout="row"
+					layout-align="center"
+					ng-style="{'background-image': 'url({{comment.viewpoint.screenshot}})'}"
+					ng-if="comment.viewpoint.screenshot"
+					ng-click="vm.showScreenShot($event, comment.viewpoint)"
+					flex)
+					
 
 	md-divider
 
@@ -189,11 +186,11 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 				ng-repeat="(action, actionData) in vm.actions"
 				aria-label="{{action}}"
 				ng-click="vm.doAction($event, action)"
-				ng-if="!vm.submitDisabled"
-				)
+				ng-disabled="vm.submitDisabled")
 
 				md-tooltip(md-direction="bottom") {{actionData.label}}
 				md-icon.angular-material-icons(style="color:{{actionData.selected ? '#FF9800' : ''}}") {{actionData.icon}}
+
 		md-button.md-fab.md-mini(aria-label="Submit", ng-disabled="vm.submitDisabled", ng-click="vm.submit()" ng-if="!vm.saving")
 			md-tooltip(md-direction="bottom") Submit
 			md-icon.angular-material-icons save
