--- a/frontend/components/issues/pug/issueScreenShotDialog.pug
+++ b/frontend/components/issues/pug/issueScreenShotDialog.pug
@@ -1,7 +1,5 @@
 md-dialog#issueScreenShotDialog(aria-label="Screen Shot")
 	issues-screen-shot(
-	send-event="vm.dialogCaller.sendEvent({type: type, value: value})"
-	close="vm.closeScreenShot()"
-	screen-shot-save="vm.dialogCaller.screenShotSave({screenShot: screenShot})"
-	screen-shot="vm.dialogCaller.screenShot"
-	layout-fill)
+		screen-shot="vm.issueComponent.screenShot"
+		screen-shot-save="vm.issueComponent.screenShotSave({screenShot: screenShot})"
+		layout-fill)
