--- a/frontend/components/issues/css/issues.css
+++ b/frontend/components/issues/css/issues.css
@@ -324,6 +324,7 @@ issue-comp .issueCompThumbnail:hover {
 
 issue-comp .issueCompThumbnailImage {
   width: 100%;
+  height: 100%;
 }
 
 issue-comp .issueCompIssueOwner {
