--- a/frontend/components/issues/pug/issueComp.pug
+++ b/frontend/components/issues/pug/issueComp.pug
@@ -62,6 +62,7 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 
 	#descriptionAndComments(flex)
 		// Description
+		h4 Description
 		.issueCompItemContainer(layout="column", layout-align="start", flex)
 			div(layout="column", layout-align="start", flex)
 				div(ng-if="!vm.data", flex, layout="column")
@@ -87,13 +88,14 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 								md-tooltip(md-direction="bottom") edit
 								md-icon.angular-material-icons(style="color:{{vm.editCommentColor}}") mode_edit
 				
-				//.issueCompThumbnail(
+				.issueCompThumbnail(
 					ng-if="vm.descriptionThumbnail"
-					ng-style="{'background-image': 'url({{vm.descriptionThumbnail}})'}"
 					ng-click="vm.showScreenShot($event, vm.issueData.viewpoint)")
+					img.issueCompThumbnailImage(ng-src="{{vm.descriptionThumbnail}}")
 
 		// Comments
 		.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="vm.issueData.comments.length>0")
+			h4 Comments
 			div(ng-repeat="comment in vm.issueData.comments", layout="column", layout-align="start", flex)
 				div(ng-click="vm.showViewpoint($event, comment.viewpoint)"
 					layout="column"
@@ -129,35 +131,40 @@ div.heightFix(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true"
 
 					// Info
 					.issueCompCommentOwner(
-					ng-if="vm.data && !comment.action"
-					layout="row"
-					layout-align="space-between"
-					flex)
+						ng-if="vm.data && !comment.action"
+						layout="row"
+						layout-align="space-between"
+						flex)
+
 						label {{comment.owner}}
 						label {{comment.timeStamp}}
 
 					// Or Auto comment
 					.issueCompCommentTitle(
-					ng-if="comment.action"
-					flex)
+						ng-if="comment.action"
+						flex)
+
 						label {{comment.action.propertyText}}: {{comment.action.from}} to {{comment.action.to}} by {{comment.owner}}
 						
 					.issueCompCommentOwner(
 						ng-if="comment.action" 
 						layout="row"
 						layout-align="space-between"
-						flex) 
+						flex)
+
 						label.issueNotification Notification 
 						label {{comment.timeStamp}}
 
-				// Thumbnail
-				.issueCompThumbnail(
-					layout="row"
-					layout-align="center"
-					ng-style="{'background-image': 'url({{comment.viewpoint.screenshotPath}})'}"
-					ng-if="comment.viewpoint.screenshotPath"
-					ng-click="vm.showScreenShot($event, comment.viewpoint)"
-					flex)
+					// Thumbnail
+					.issueCompThumbnail(
+						layout="row"
+						layout-align="center"
+						ng-if="comment.viewpoint.screenshotPath"
+						ng-click="vm.showScreenShot($event, comment.viewpoint)"
+						flex)
+						img.issueCompThumbnailImage(ng-src="{{comment.viewpoint.screenshotPath}}")
+
+					md-divider
 					
 
 	md-divider
