--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -1,6 +1,13 @@
 div(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)")
 	img#homeBackground(src="/public/images/viewer_background.png")
-	viewermanager
+	viewer(
+		node="node"
+		account="vm.state.account"
+		model="vm.state.model"
+		branch="vm.state.revision"
+		revision = "vm.state.revision"
+		style="pointer-events:none")
+		
 	#legalLinks(layout="row")
 		a(ng-repeat="display in vm.legalDisplays", target="_blank", href="{{display.page}}") {{display.title}}
 
